circt-bc260128-00000db6/origin/repro_opt.log
<unknown>:0: error: MLIR Textual PassPipeline Parser:1:1: error: 'comb-simplify' does not refer to a registered pass or pass pipeline
comb-simplify
^

